compiler/fir/analysis-tests/testData/resolve/suppress/singleError.kt
fun foo(x: String) {}

@Suppress(<!ERROR_SUPPRESSION!>"ARGUMENT_TYPE_MISMATCH"<!>)
fun bar() {
    foo(10)
}
